# variant-generator

./: CMakeLists.txt  README.md  mkvariant.cc
example/: main.cc  variant.cc  variant.hh  variant.inf
test/: basic.cc  basic_variant.inf  copy.cc  copy.inf  helper.hh  json.cc  json.json  main.cc  namespace.cc  namespace.inf  non_default.cc  non_default.inf
